# TensorRT

./: README.md
Scalar&LeakyReLU&SeLU/: CMakeLists.txt  笔记.txt
Scalar&LeakyReLU&SeLU/models/engine/: sample_customLeakyReLU_fp32.engine  sample_customSELU_fp32.engine  sample_customScalar_fp32.engine
Scalar&LeakyReLU&SeLU/models/onnx/: sample_customLeakyReLU.onnx  sample_customSELU.onnx  sample_customScalar.onnx
Scalar&LeakyReLU&SeLU/src/cpp/: customLeakyReLU_kernel.cu  customLeakyReLU_plugin.cpp  customLeakyReLU_plugin.hpp  customSELU_kernel.cu  customSELU_plugin.cpp  customSELU_plugin.hpp  customScalar_kernel.cu  customScalar_plugin.cpp  customScalar_plugin.hpp  main.cpp  model.cpp  model.hpp
Scalar&LeakyReLU&SeLU/src/python/: customLeakyReLU_export.py  customSELU_export.py  customScalar_export.py
build&infer_封装/: CMakeLists.txt
build&infer_封装/include/: model.hpp  utils.hpp
build&infer_封装/src/cpp/: main.cpp  model.cpp  utils.cpp
build&infer_封装/src/python/: pretained_export.py
build&infer_工厂模式/: CMakeLists.txt
build&infer_工厂模式/calibration/: calibration_table.txt
build&infer_工厂模式/include/: trt_calibrator.hpp  trt_classifier.hpp  trt_model.hpp  trt_preprocess.hpp  trt_worker.hpp
build&infer_工厂模式/src/cpp/: main.cpp  trt_calibrator.cpp  trt_classifier.cpp  trt_model.cpp  trt_preprocess.cpp  trt_preprocess.cu  trt_worker.cpp
build&infer_工厂模式/src/python/: pretained_export.py
build_basic/: CMakeLists.txt
build_basic/cmake/: FindTensorRT.cmake
build_basic/src/cpp/: build.cpp
